[project]
name = "webvpn-proxy"
version = "0.1.0"
description = "WebVPN代理服务器，用于渗透测试"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=48.0.0",
    "mitmproxy>=12.2.3",
    "requests>=2.34.1",
]

[project.scripts]
webvpn-proxy = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
